--- a/adowpf/adowpf/MainWindow.xaml
+++ b/adowpf/adowpf/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="ButtonBieren" Content="Bieren openen"
+                HorizontalAlignment="Left" VerticalAlignment="Top"
+                Width="100" Margin="214,59,0,0" Click="ButtonBieren_Click" />
+        <Label x:Name="labelStatus" Content="leeg maken"
+               HorizontalAlignment="Left" VerticalAlignment="Top" Margin="230,154,0,0" />
     </Grid>
 </Window>
