--- a/adowpf/adowpf/App.xaml
+++ b/adowpf/adowpf/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:adowpf"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Overschrijven.xaml">
     <Application.Resources>
          
     </Application.Resources>
